Tag and Post generated

--- a/src/main/webapp/i18n/pl/global.json
+++ b/src/main/webapp/i18n/pl/global.json
@@ -9,6 +9,8 @@
         "main": "Encje",
         "userExtra": "User Extra",
         "followedUser": "Followed User",
+        "tag": "Tag",
+        "post": "Post",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
