--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -11,6 +11,7 @@
         "followedUser": "Followed User",
         "tag": "Tag",
         "post": "Post",
+        "comment": "Comment",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
