users component mods

--- a/src/main/webapp/i18n/pl/global.json
+++ b/src/main/webapp/i18n/pl/global.json
@@ -108,7 +108,8 @@
       "edit": "Edytuj",
       "open": "Otwórz",
       "save": "Zapisz",
-      "view": "Widok"
+      "view": "Widok",
+      "follow": "Obserwuj"
     },
     "detail": {
       "field": "Pole",
