--- a/src/main/webapp/i18n/pl/home.json
+++ b/src/main/webapp/i18n/pl/home.json
@@ -1,5 +1,6 @@
 {
   "home": {
+    "name": "Strona główna",
     "title": "Witaj w aplikacji Soundgram!",
     "subtitle": "Soundgram jest miejscem w którym możesz dzielić się dźwiękiem ze swoimi znajomymi",
     "logged": {
