--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,5 +1,6 @@
 {
   "home": {
+    "name": "Home page",
     "title": "Welcome to Soundgram!",
     "subtitle": "Soundgram is a place to share sounds with your friends",
     "logged": {
