Users tab, followed users - unfollow (need repair)

--- a/src/main/webapp/i18n/en/users.json
+++ b/src/main/webapp/i18n/en/users.json
@@ -1,6 +1,8 @@
 {
   "users": {
     "title": "Users",
-    "followedUsers": "My followed users"
+    "followedUsers": "My followed users",
+    "allUsers": "All users",
+    "search": "Search for user"
   }
 }
