--- a/src/main/webapp/i18n/pl/global.json
+++ b/src/main/webapp/i18n/pl/global.json
@@ -109,7 +109,8 @@
       "open": "Otwórz",
       "save": "Zapisz",
       "view": "Widok",
-      "follow": "Obserwuj"
+      "follow": "Obserwuj",
+      "unfollow": "Przestań obserwować"
     },
     "detail": {
       "field": "Pole",
