--- a/src/main/webapp/i18n/pl/users.json
+++ b/src/main/webapp/i18n/pl/users.json
@@ -1,6 +1,8 @@
 {
   "users": {
     "title": "[pl] Users",
-    "followedUsers": "Moi obserwowani użytkownicy"
+    "followedUsers": "Moi obserwowani użytkownicy",
+    "allUsers": "Wszyscy użytkownicy",
+    "search": "Wyszukaj użytkownika"
   }
 }
