--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -109,7 +109,8 @@
       "open": "Open",
       "save": "Save",
       "view": "View",
-      "follow": "Follow"
+      "follow": "Follow",
+      "unfollow": "Unfollow"
     },
     "detail": {
       "field": "Field",
