--- a/src/main/webapp/i18n/pl/post.json
+++ b/src/main/webapp/i18n/pl/post.json
@@ -19,7 +19,8 @@
       },
       "postContent": "Post Content",
       "date": "Date",
-      "tag": "Tag"
+      "tag": "Tag",
+      "user": "User"
     }
   }
 }
