--- a/src/main/webapp/i18n/en/users.json
+++ b/src/main/webapp/i18n/en/users.json
@@ -2,7 +2,9 @@
   "users": {
     "title": "Users",
     "followedUsers": "My followed users",
+    "showFollowedUsers": "Show my followed users",
     "allUsers": "All users",
+    "showAllUsers": "Show all users",
     "search": "Search for user"
   }
 }
