Tag detail (i18n + sort posts), avatar service sort, edit post - update image/audio bug fix, postObject code clean, settings (avatarFile -> @rxweb/reactive-form-validators), post-player slider style

--- a/src/main/webapp/i18n/en/post.json
+++ b/src/main/webapp/i18n/en/post.json
@@ -6,7 +6,8 @@
         "createLabel": "Create a new Post",
         "createOrEditLabel": "Create or edit a Post",
         "search": "Search for Post",
-        "notFound": "No Posts found"
+        "notFound": "No Posts found",
+        "post-tag": "Posts that contain the tag"
       },
       "created": "A new Post is created with identifier {{ param }}",
       "updated": "A Post is updated with identifier {{ param }}",
