audio-file-detail, music front, buttons translations, scroll-top.component, navbar entities only for admin, post-player front

--- a/src/main/webapp/i18n/en/audioFile.json
+++ b/src/main/webapp/i18n/en/audioFile.json
@@ -22,7 +22,9 @@
       "iconPath": "Owner Id",
       "post": "Post",
       "user": "Users who liked this audio: ",
-      "owner": "File Owner"
+      "owner": "File Owner",
+      "like": "Like this audio",
+      "dislike": "Dislike this audio"
     }
   }
 }
