--- a/src/main/webapp/i18n/en/post.json
+++ b/src/main/webapp/i18n/en/post.json
@@ -21,7 +21,8 @@
       "postContent": "Post Content",
       "date": "Date",
       "tag": "Tag",
-      "user": "User"
+      "user": "User",
+      "viewPost": "View post"
     }
   }
 }
