--- a/src/main/webapp/i18n/pl/home.json
+++ b/src/main/webapp/i18n/pl/home.json
@@ -6,15 +6,9 @@
     "logged": {
       "message": "Jesteś zalogowany jako użytkownik \"{{username}}\"."
     },
-    "question": "Jeśli masz jakiekolwiek pytania na temat JHipster:",
-    "link": {
-      "homepage": "Strona domowa JHipster",
-      "stackoverflow": "JHipster na Stack Overflow",
-      "bugtracker": "JHipster bug tracker",
-      "chat": "Publiczny chat room JHipster",
-      "follow": "skontaktuj się z @jhipster na Twitterze"
-    },
-    "like": "Jeśli lubisz JHipster, nie zapomnij dać nam gwiazdki na",
-    "github": "GitHubie"
+    "postUsers": "Posty obserwowanych użytkowników",
+    "postTags": "Posty według obserwowanych tagów",
+    "showUsersPosts": "Pokaż posty obserwowanych użytkowników",
+    "showTagPosts": "Pokaż posty według moich tagów"
   }
 }
