Translations, fixes -> file input validation

--- a/src/main/webapp/i18n/en/post.json
+++ b/src/main/webapp/i18n/en/post.json
@@ -22,7 +22,9 @@
       "date": "Date",
       "tag": "Tag",
       "user": "User",
-      "viewPost": "View post"
+      "viewPost": "View post",
+      "likes": "Likes",
+      "comments": "Comments"
     }
   }
 }
