New loading animation, trasnlations, files validation at new Post, removed <jhi-alert>'s

--- a/src/main/webapp/i18n/en/post.json
+++ b/src/main/webapp/i18n/en/post.json
@@ -24,7 +24,11 @@
       "user": "User",
       "viewPost": "View post",
       "likes": "Likes",
-      "comments": "Comments"
+      "comments": "Comments",
+      "writeContent": "Write something ... ",
+      "postTags": "Post tags",
+      "createPost": "Create new Post",
+      "editPost": "Edit post"
     }
   }
 }
