--- a/src/main/webapp/i18n/en/tag.json
+++ b/src/main/webapp/i18n/en/tag.json
@@ -26,7 +26,8 @@
       "newTag": "New tag name ...",
       "userTags": "User tags",
       "yourTags": "Your tags",
-      "addTag": "tag ..."
+      "addTag": "tag ...",
+      "add": "Add"
     }
   }
 }
