--- a/src/main/webapp/i18n/pl/tag.json
+++ b/src/main/webapp/i18n/pl/tag.json
@@ -26,7 +26,8 @@
       "newTag": "Nowy tag ...",
       "userTags": "Tagi użytkownika",
       "yourTags": "Twoje tagi",
-      "addTag": "tag ..."
+      "addTag": "tag ...",
+      "add": "Dodaj"
     }
   }
 }
