Post layout, screenshots, README.md

--- a/src/main/webapp/i18n/pl/password.json
+++ b/src/main/webapp/i18n/pl/password.json
@@ -1,6 +1,6 @@
 {
   "password": {
-    "title": "Hasło dla [<strong>{{username}}</strong>]",
+    "title": "Hasło dla <strong>{{username}}</strong>",
     "form": {
       "button": "Zapisz"
     },
