--- a/src/main/webapp/i18n/pl/users.json
+++ b/src/main/webapp/i18n/pl/users.json
@@ -1,6 +1,6 @@
 {
   "users": {
-    "title": "[pl] Users",
+    "title": "Użytkownicy",
     "followedUsers": "Moi obserwowani użytkownicy",
     "showFollowedUsers": "Pokaż moich obserwowanych użytkowników",
     "allUsers": "Wszyscy użytkownicy",
