--- a/src/main/webapp/i18n/pl/global.json
+++ b/src/main/webapp/i18n/pl/global.json
@@ -3,8 +3,8 @@
     "title": "Soundgram",
     "browsehappy": "Używasz <strong>przestarzałej</strong> przeglądarki. Proszę <a href=\"http://browsehappy.com/\">uaktualnij swoją przeglądarkę</a> aby poprawić wrażenia z użytkowania tej aplikacji.",
     "menu": {
-      "home": "Strona domowa",
-      "users": "Osoby",
+      "home": "Strona główna",
+      "users": "Użytkownicy",
       "profile": "Profil",
       "music": "Muzyka",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
